k8s/newsfeed-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsfeed
spec:
  selector:
    matchLabels:
      app: newsfeed-api
  template:
    metadata:
      labels:
        app: newsfeed-api
    spec:
      containers:
      - name: newsfeed-api
        image: localhost:5000/newsfeed-api:16072024
        resources:
          limits:
            memory: "32Mi"
            cpu: "64m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.Development.json
          subPath: appsettings.Development.json
      volumes:
      - name: config-volume
        configMap:
          name: newsfeed-development-config
