k8s/platform-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  selector:
    matchLabels:
      app: platform-api
  template:
    metadata:
      labels:
        app: platform-api
    spec:
      containers:
      - name: platform-api
        image: localhost:5000/platform-api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
