k8s/newsfeed-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsfeed-api-svc
spec:
  selector:
    app: newsfeed-api
  ports:
  - port: 8080
    targetPort: 8080
