k8s/platform-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-api-svc
spec:
  selector:
    app: platform-api
  ports:
  - port: 8080
    targetPort: 8080
