k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: apps.herond.local
    http:
      paths:
      - path: /PlatformAPI(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: platform-api-svc
            port:
              number: 8080
      - path: /NewsfeedAPI(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: newsfeed-api-svc
            port:
              number: 8080
